대제목수정1
대제목수정1

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 </div> -->
 
 <div style="font-size:42px; text-align:right" class="fontBr">
-JIHOON LEE
+Chan sup, Yang
 </div>
-<p class="fontRe" style="margin:1px; float:right">SEOUL, SEOULKS013 | (C) 821062044217 | ljh62044217@gmail.com</p>
+<p class="fontRe" style="margin:1px; float:right">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
 </div>
 </div>
 
