--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<title>
+		Chansup's Portfolio
+		</title>
 </head>
 
 	
@@ -37,7 +40,7 @@
 </div> -->
 
 <div style="font-size:42px; text-align:right" class="fontBr">
-Chan sup, Yang
+Chansup, Yang
 </div>
 <p class="fontRe" style="margin:1px; float:right">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
 </div>
@@ -50,16 +53,6 @@ Education
 
 <div class="subHeader fontBr">
   - Hongik University Seoul Art Design Univeristy Visual Communication Design Department
-</div>
-
-<div style="font-size:16px" class="fontRe">
-<!-- * Web Development<br>
-* Data Structure<br> -->
-</div>
-
-<div style="margin-top:5px; text-decoration: line-through;
-" class="subHeader fontBr">
- - Hongik University  Seoul Computer Engineering Department (Stopped)
 </div>
 
 <div style="font-size:16px" class="fontRe">
