--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <img style="width:150px; height:150px;" src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/17952989_1913768898860153_4727757735607037463_n.jpg?oh=6977af1bed4bf10d70c0372fd774d70c&oe=59A06D91" alt="">
 </div> -->
 
-<div style="font-size:42px; text-align:left" class="fontBr">
+<div style="font-size:42px; text-align:right" class="fontBr">
 Chansup, Yang
 </div>
-<p class="fontRe" style="margin:1px; float:left">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
+<p class="fontRe" style="margin:1px; float:right">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
 </div>
 </div>
 
