--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
 <div class="row">
 <div class="headWrapper col-ls-12 col-md-12 col-xs-12 col-sm-12">
 
-<!-- <div class="offset-ls-10 col-ls-2">
-<img style="width:150px; height:150px;" src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/17952989_1913768898860153_4727757735607037463_n.jpg?oh=6977af1bed4bf10d70c0372fd774d70c&oe=59A06D91" alt="">
-</div> -->
-
-<div style="font-size:42px; text-align:right" class="fontBr">
+<div style="font-size:42px;" class="fontBr">
 Chansup, Yang
 </div>
-<p class="fontRe" style="margin:1px; float:right">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
+<p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
 </div>
 </div>
 
@@ -52,22 +48,28 @@ Education
 </div> <!--bodyHeader-->
 
 <div class="subHeader fontBr">
-  - Hongik University Seoul Art Design Univeristy Visual Communication Design Department
+  - Hongik University Advertising and Public Relations
 </div>
 
 <div style="font-size:16px" class="fontRe">
-<!-- * Web Development<br>
-* Data Structure<br> -->
-</div>
-
-<div style="margin-top:5px" class="subHeader fontBr">
-  - Udacity&nbspComputer Enginnering Web Application Development</div>
-
-<div style="font-size:16px" class="fontRe">
-<!-- * HTML5 / CSS / Javascript / jQuery<br>
+* HTML5 / CSS / Javascript / jQuery<br>
 * Now on Php<br>
-* Git / GitHub<br> -->
+* Git / GitHub<br
 </div>
+
+<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+GPA</div> 
+<hr>
+<div style="line-height:160%; font-size:14px" class="fontRe">
+<br>
+Total: 3.76 / 4.5 <br>
+1: 3.08  /  2.9  /  4.33<br>
+2: 4.29  /  4.10 <br>	
+3: 4.17  /  3.97 <br>
+4: 3.40 / Not yet
+<br>
+</div>
+
 
 <div style="font-size:14px; margin-top:10px" class="fontRe">
 
