--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@ Education
 <div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 GPA</div> 
 <div style="line-height:160%; font-size:14px" class="fontRe">
-<br>
-Total: 3.76 / 4.5 <br>
+Total: 3.76 / 4.5 <br><br>
 1: 3.08  /  2.9  /  4.33<br>
 2: 4.29  /  4.10 <br>	
 3: 4.17  /  3.97 <br>
 4: 3.40 / Not yet
 <br>
 </div>
-
+<hr>
 
 <div style="font-size:14px; margin-top:10px" class="fontRe">
 
