--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <div class="container-fluid">
 <div class="row">
 <div class="headWrapper col-ls-12 col-md-12 col-xs-12 col-sm-12">
-
 <div style="font-size:42px;" class="fontBr">
+
 Chansup, Yang
 </div>
 <p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
@@ -44,7 +44,7 @@ Chansup, Yang
 
 <hr>
 	
-<div style="margin-top:25px;" class="bodyHeader fontBr">
+<div class="bodyHeader fontBr">
 WorkHistory
 </div> <!--bodyHeader-->
 <hr>
