--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Chansup, Yang
 
 <hr>
 	
-<div class="bodyHeader fontBr">
-WorkHistory
+<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+Work History
 </div> <!--bodyHeader-->
 <hr>
 <div style="margin-top:13px" class="subHeader fontBr">
