--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Chansup, Yang
 
 <div class="bodyWrapper">
 <div style="font-size:14px; margin-top:10px" class="fontRe">
-
+</div>
 <hr>
 	
 <div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
