--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
 <hr>
 	
 <h3>2017</h3>
-
+<div style="font-size:14px" class="fontRe">
 <div>
 * 패스트캠퍼스 "프레이머로 구현하는 인터렉티브 디자인 및 UX" 코스 교육 담당 
 </div>
@@ -106,27 +106,27 @@ while using their smartphone)</a>
 <div>* 박사 논문 어시스턴트 (Ph.D. Research Paper About Minimalism Design / Assistance Using Survey)</div>
 <div>* 박사 논문 어시스턴트 (Ph.D. Research Paper About Color Theory / Assistance Usign Mturk Survey)</div>
 <hr>
-
+	</div>
 
 <h3>2016</h3> 	
 
 
-
+<div style="font-size:14px" class="fontRe">
 <div class="flex" id="film">* 와우 영상제 웹 디자인, 개발 팀장 (2016 WOW Flim Festival / Web Design / Development Head)</div>
 
 <!-- <div>* HANCOM Industrial Link </div> -->
 
 <div>* 연세대학교 학회 S&D 리디자인 (Yonsei University Consulting Academy Brochure Design)</div>
 <div>* 홍익대학교 아두이노 3D 프린팅 동아리 설립 멤버(Arduino/3D Printing Club)</div>
-
+	</div>
 <hr>
 <h3>2015</h3>
-
+<div style="font-size:14px" class="fontRe">
 <div>* 시각디자인학과 학부 연구생(Undergraduate Researcher / Research Paper Asssistance)<br></div>
 <div>* 부산대학교 포스터 어워드 우수상 (2015 Pusan National University Poster Design Exellence Award)</div>
 
 <br>
-
+</div>
 <div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 Skills
 </div> <!--bodyHeader-->
