--- a/index.html
+++ b/index.html
@@ -3,210 +3,223 @@
 
 <html lang="en">
 
-<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="pf2.css">
-		<script
-			src="https://code.jquery.com/jquery-3.1.1.js"
-			integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-			crossorigin="anonymous"></script>
-		<!-- <script src="jiResume.js"></script> -->
-		<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<head>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta charset="UTF-8">
+			<link rel="stylesheet" href="pf2.css">
+				<script
+					src="https://code.jquery.com/jquery-3.1.1.js"
+					integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+					crossorigin="anonymous">
+				</script>
+				<!-- <script src="jiResume.js"></script> -->
+				<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+				<!-- Latest compiled and minified CSS -->
+				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-		<!-- Optionalss theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+				<!-- Optionalss theme -->
+				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		<title>
-		Chansup's Portfolio
-		</title>
-</head>
-
-
-<body>
-<div class="container-fluid">
-<div class="row">
-<div class="headWrapper col-ls-12 col-md-12 col-xs-12 col-sm-12">
-<div style="font-size:42px;" class="fontBr">
-
-Chansup, Yang
-</div>
-<p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
-</div>
-</div>
-<div class="bodyWrapper">
-
-<hr>
-	
-<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
-Work History
-</div> <!--bodyHeader-->
-<hr>
-<div style="margin-top:13px" class="subHeader fontBr">
-DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
-</div>
-
-<div style="font-size:14px" class="fontRe">
-* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
-* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
-* Designed proposal covers and spines.<br>
-* Web Page Publishing<br>
-* Design Research for a Color Scheme<br>
-</div>
-
-<hr>
-
-<div style="margin-top:13px" class="subHeader fontBr">
-Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
-</div>
-
-<div style="font-size:14px" class="fontRe">
-* VR Development.<br>
-* VR Design.<br>
-* Unity Scripting.<br>
-* HTC VIVE, Steam VR, Oculus Lfit<br>
-</div>
-
-<br>
-	
-<!--
-<h3>2017</h3>
-<div style="font-size:14px" class="fontRe">
-<div>
-* 패스트캠퍼스 "프레이머로 구현하는 인터렉티브 디자인 및 UX" 코스 교육 담당 
-</div>
-
-<div>
-* 디닷인터렉티브 VR 개발 및 디자인 인턴 (Intern in VR Development and Design)
-</div> 
-
-<div>
-<a href="http://www.riss.kr/search/detail/DetailView.do?p_mat_type=1a0202e37d52c72d&control_no=481ca61f84ea76997ecd42904f0c5d65">* 한국디자인학회 논문 개제 및 장려상(A design proposal to improve safety of pedestrians
-while using their smartphone)</a>
-</div>
-
-<div>
-* 홍익대학교 공과대학 연구원 (Researcher at Hongik University Engineering Department)
-</div>
-
-<div>
-<a href="http://www.kbskorean.co.kr/">* KBS 한국어진흥원 홈페이지 리뉴얼 디자인 및 프론트앤드 (Web Design / Front End Web Development)</a>
-</div>
-
-<div>
-  <a href="http://proto.netlify.com/">* 홍대 미술대학 시디과 코딩 소모임 프로토 설립 (Visual Communication Department Coding Academy 'PROTO'
-  Founder & First President)</a>
-</div>
-
-<div>* 석사 논문 어시스턴트 (Master's Degree Graduation Paper About Interactive News / Assistance Using Mturk Survey)</div>
-<div>* 박사 논문 어시스턴트 (Ph.D. Research Paper About Minimalism Design / Assistance Using Survey)</div>
-<div>* 박사 논문 어시스턴트 (Ph.D. Research Paper About Color Theory / Assistance Usign Mturk Survey)</div>
-<hr>
-	</div>
-
-<h3>2016</h3> 	
+				<!-- Latest compiled and minified JavaScript -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+			
+			<title>
+				Chansup's Portfolio
+			</title>
+	</head>
 
 
-<div style="font-size:14px" class="fontRe">
-<div class="flex" id="film">* 와우 영상제 웹 디자인, 개발 팀장 (2016 WOW Flim Festival / Web Design / Development Head)</div>
+	<body>
+	<div class="container-fluid">
+				<div class="row">
+					<div class="headWrapper col-ls-12 col-md-12 col-xs-12 col-sm-12">
+						<div style="font-size:42px;" class="fontBr">
+							Chansup, Yang
+						</div>
+						<p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +821090011209 | wasabi1209@gmail.com</p>
+					</div>
+				</div>
+			<div class="bodyWrapper">
 
-<div>* 연세대학교 학회 S&D 리디자인 (Yonsei University Consulting Academy Brochure Design)</div>
-<div>* 홍익대학교 아두이노 3D 프린팅 동아리 설립 멤버(Arduino/3D Printing Club)</div>
-	</div>
-<hr>
-<h3>2015</h3>
-<div style="font-size:14px" class="fontRe">
-<div>* 시각디자인학과 학부 연구생(Undergraduate Researcher / Research Paper Asssistance)<br></div>
-<div>* 부산대학교 포스터 어워드 우수상 (2015 Pusan National University Poster Design Exellence Award)</div>
+			<hr>
+			
+				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+					Work History
+				</div> <!--bodyHeader-->
+			
+			<hr>
+				<div style="margin-top:13px" class="subHeader fontBr">
+					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
+				</div>
 
-<br>
-</div>
--->
-<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
-Skills
-</div> <!--bodyHeader-->
+				<div style="font-size:14px" class="fontRe">
+					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
+					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
+					* Designed proposal covers and spines.<br>
+					* Web Page Publishing<br>
+					* Design Research for a Color Scheme<br>
+				</div>
 
-<div style="font-size:14px" class="fontRe">
-<hr>
-<h3>Design</h3>
-* Sketch <br>
-* Application Design <br>
-* Adobe Photoshop <br>* Adobe Illustrator <br>* Adobe Muse <br>* Adobe Indesign<br>
-* Adobe XD 
-<hr>
-<h3>Coding</h3>
-* Framer<br>
-* Adobe DreamWeaver <br>* Visual Studio <br>* Xcode <br>* HTML5<br>
-* jQuery <br>* Javascript <br>* CSS <br>* C++<br>* Git / GitHub
-</div>
+		<hr>
 
-<br>
+				<div style="margin-top:13px" class="subHeader fontBr">
+					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
+				</div>
 
-<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
-Research Methods
-</div> <!--bodyHeader-->
-<hr>
-<div style="font-size:14px" class="fontRe">
-* Speed Dating <br>* Ethnography<br> * Shadow Recording<br> * High-Fi<br> * Mid-Fi<br>* Low-Fi<br>
-* Wireframing<br> * FGI <br>* Mturk <br>* Prototyping <br>* Stakeholder Map<br>
-* User Journey Map <br>* Affinity Diagram <br>* Persona<br>
-</div>
+				<div style="font-size:14px" class="fontRe">
+					* VR Development.<br>
+					* VR Design.<br>
+					* Unity Scripting.<br>
+					* HTC VIVE, Steam VR, Oculus Lfit<br>
+				</div>
 
-<br>
-<div class="bodyHeader fontBr">
-Education
-</div> <!--bodyHeader-->
-<hr>
+				<br>
+					
+				<!--
+				<h3>2017</h3>
+				<div style="font-size:14px" class="fontRe">
+					<div>
+					* 패스트캠퍼스 "프레이머로 구현하는 인터렉티브 디자인 및 UX" 코스 교육 담당 
+					</div>
 
-<div class="subHeader fontBr">
-  - Hongik University Advertising and Public Relations
-</div>
+					<div>
+						* 디닷인터렉티브 VR 개발 및 디자인 인턴 (Intern in VR Development and Design)
+					</div> 
 
-<div style="font-size:16px" class="fontRe">
-* HTML5 / CSS / Javascript / jQuery<br>
-* Now on Php<br>
-* Git / GitHub<br
-</div>
-<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
-GPA</div> 
-<div style="line-height:160%; font-size:14px" class="fontRe">
-Total: 3.76 / 4.5 <br><br>
-1: 3.08  /  2.9  /  4.33<br>
-2: 4.29  /  4.10 <br>	
-3: 4.17  /  3.97 <br>
-4: 3.40 / Not yet
-<br>
-</div>
-<hr>
+					<div>
+						<a href="http://www.riss.kr/search/detail/DetailView.do?p_mat_type=1a0202e37d52c72d&control_no=481ca61f84ea76997ecd42904f0c5d65">* 한국디자인학회 논문 개제 및 장려상(A design proposal to improve safety of pedestrians
+						while using their smartphone)</a>
+					</div>
 
-	
+					<div>
+						* 홍익대학교 공과대학 연구원 (Researcher at Hongik University Engineering Department)
+					</div>
 
-<!-- <div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
-Professional Summary
-<hr>
-</div> 
-<div style="line-height:160%; font-size:14px" class="fontRe">
-Designer/Developer who produces dynamic visuals for web and digital projects.<br>
-Design Researcher who multi-tasks and manages time well in fiercely competitive,
-fast-paced environments.
-</div>
+					<div>
+						<a href="http://www.kbskorean.co.kr/">* KBS 한국어진흥원 홈페이지 리뉴얼 디자인 및 프론트앤드 (Web Design / Front End Web Development)</a>
+					</div>
 
-<br>
-<br> -->
+					<div>
+						<a href="http://proto.netlify.com/">* 홍대 미술대학 시디과 코딩 소모임 프로토 설립 (Visual Communication Department Coding Academy 'PROTO'
+						Founder & First President)</a>
+					</div>
 
-<div class="fontBr" style="font-size:25px">
-<!--<a href="index2.html" target="_blank">GO TO PORTFOILO SITE</a>-->
-</div>
+					<div>
+						* 석사 논문 어시스턴트 (Master's Degree Graduation Paper About Interactive News / Assistance Using Mturk Survey)
+					</div>
+					<div>
+						* 박사 논문 어시스턴트 (Ph.D. Research Paper About Minimalism Design / Assistance Using Survey)
+					</div>
+					<div>
+						* 박사 논문 어시스턴트 (Ph.D. Research Paper About Color Theory / Assistance Usign Mturk Survey)
+					</div>
+					<hr>
+				</div>
 
-</div><!--bodyWrapper-->
-</div><!--container-->
-	
+					<h3>2016</h3> 	
 
 
-</body>
+						<div style="font-size:14px" class="fontRe">
+						<div class="flex" id="film">* 와우 영상제 웹 디자인, 개발 팀장 (2016 WOW Flim Festival / Web Design / Development Head)</div>
+
+						<div>* 연세대학교 학회 S&D 리디자인 (Yonsei University Consulting Academy Brochure Design)</div>
+						<div>* 홍익대학교 아두이노 3D 프린팅 동아리 설립 멤버(Arduino/3D Printing Club)</div>
+					</div>
+					<hr>
+					<h3>2015</h3>
+					<div style="font-size:14px" class="fontRe">
+						<div>
+							* 시각디자인학과 학부 연구생(Undergraduate Researcher / Research Paper Asssistance)<br>
+						</div>
+						<div>
+							* 부산대학교 포스터 어워드 우수상 (2015 Pusan National University Poster Design Exellence Award)
+					</div>
+
+					<br>
+				</div>
+				-->
+				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+					Skills
+				</div> <!--bodyHeader-->
+
+				<div style="font-size:14px" class="fontRe">
+					<hr>
+					<h3>Design</h3>
+					* Sketch <br>
+					* Application Design <br>
+					* Adobe Photoshop <br>* Adobe Illustrator <br>* Adobe Muse <br>* Adobe Indesign<br>
+					* Adobe XD 
+					<hr>
+					<h3>Coding</h3>
+					* Framer<br>
+					* Adobe DreamWeaver <br>* Visual Studio <br>* Xcode <br>* HTML5<br>
+					* jQuery <br>* Javascript <br>* CSS <br>* C++<br>* Git / GitHub
+				</div>
+
+				<br>
+
+				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+					Research Methods
+				</div> <!--bodyHeader-->
+				<hr>
+				<div style="font-size:14px" class="fontRe">
+					* Speed Dating <br>* Ethnography<br> * Shadow Recording<br> * High-Fi<br> * Mid-Fi<br>* Low-Fi<br>
+					* Wireframing<br> * FGI <br>* Mturk <br>* Prototyping <br>* Stakeholder Map<br>
+					* User Journey Map <br>* Affinity Diagram <br>* Persona<br>
+				</div>
+
+				<br>
+				<div class="bodyHeader fontBr">
+					Education
+				</div> <!--bodyHeader-->
+				<hr>
+
+				<div class="subHeader fontBr">
+					- Hongik University Advertising and Public Relations
+				</div>
+
+				<div style="font-size:16px" class="fontRe">
+					* HTML5 / CSS / Javascript / jQuery<br>
+					* Now on Php<br>
+					* Git / GitHub<br
+				</div>
+				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+					GPA
+				</div> 
+				<div style="line-height:160%; font-size:14px" class="fontRe">
+					Total: 3.76 / 4.5 <br><br>
+					1: 3.08  /  2.9  /  4.33<br>
+					2: 4.29  /  4.10 <br>	
+					3: 4.17  /  3.97 <br>
+					4: 3.40 / Not yet
+				<br>
+				</div>
+				<hr>
+
+					
+
+				<!-- <div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+				Professional Summary
+				<hr>
+				</div> 
+				<div style="line-height:160%; font-size:14px" class="fontRe">
+				Designer/Developer who produces dynamic visuals for web and digital projects.<br>
+				Design Researcher who multi-tasks and manages time well in fiercely competitive,
+				fast-paced environments.
+				</div>
+
+				<br>
+				<br> -->
+
+				<div class="fontBr" style="font-size:25px">
+					<!--<a href="index2.html" target="_blank">GO TO PORTFOILO SITE</a>-->
+				</div>
+
+			</div><!--bodyWrapper-->
+	</div><!--container-->
+		
+
+
+	</body>
 
 </html>
