--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="row">
 					<div class="headWrapper col-ls-12 col-md-12 col-xs-12 col-sm-12">
 						<div style="font-size:42px;" class="fontBr">
-							Chansup, Yang
+							Yang, Chansup
 						</div>
 						<p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +821090011209 | <a href="mailto:wasabi1209@gmail.com">wasabi1209@gmail.com</a></p>
 					</div>
