--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<hr>
 
 				<div class="subHeader fontBr">
-					- Hongik University Advertising and Public Relations
+					Hongik University Advertising and Public Relations
 				</div>
 
 				<div style="font-size:16px" class="fontRe">
