--- a/index.html
+++ b/index.html
@@ -145,13 +145,23 @@
 					<h3>Design</h3>
 					* Sketch <br>
 					* Application Design <br>
-					* Adobe Photoshop <br>* Adobe Illustrator <br>* Adobe Muse <br>* Adobe Indesign<br>
+					* Adobe Photoshop <br>
+					* Adobe Illustrator <br>
+					* Adobe Muse <br>
+					* Adobe Indesign<br>
 					* Adobe XD 
 					<hr>
 					<h3>Coding</h3>
 					* Framer<br>
-					* Adobe DreamWeaver <br>* Visual Studio <br>* Xcode <br>* HTML5<br>
-					* jQuery <br>* Javascript <br>* CSS <br>* C++<br>* Git / GitHub
+					* Adobe DreamWeaver <br>
+					* Visual Studio <br>
+					* Xcode <br>
+					* HTML5<br>
+					* jQuery <br>
+					* Javascript <br>
+					* CSS <br>
+					* C++<br>
+					* Git / GitHub
 				</div>
 
 				
@@ -160,9 +170,20 @@
 				</div> <!--bodyHeader-->
 				<hr>
 				<div style="font-size:14px" class="fontRe">
-					* Speed Dating <br>* Ethnography<br> * Shadow Recording<br> * High-Fi<br> * Mid-Fi<br>* Low-Fi<br>
-					* Wireframing<br> * FGI <br>* Mturk <br>* Prototyping <br>* Stakeholder Map<br>
-					* User Journey Map <br>* Affinity Diagram <br>* Persona<br>
+					* Speed Dating <br>
+					* Ethnography<br> 
+					* Shadow Recording<br> 
+					* High-Fi<br> 
+					* Mid-Fi<br>
+					* Low-Fi<br>
+					* Wireframing<br> 
+					* FGI <br>
+					* Mturk <br>
+					* Prototyping <br>
+					* Stakeholder Map<br>
+					* User Journey Map <br>
+					* Affinity Diagram <br>
+					* Persona<br>
 				</div>
 
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
