--- a/index.html
+++ b/index.html
@@ -142,48 +142,25 @@
 
 				<div style="font-size:14px" class="fontRe">
 					<hr>
-					<h3>Design</h3>
-					* Sketch <br>
-					* Application Design <br>
-					* Adobe Photoshop <br>
-					* Adobe Illustrator <br>
-					* Adobe Muse <br>
-					* Adobe Indesign<br>
-					* Adobe XD 
+					<h3>Office</h3>
+					* MS Excel<br>
+					* MS Word <br>
+					* MS PowerPoint
 					<hr>
-					<h3>Coding</h3>
-					* Framer<br>
-					* Adobe DreamWeaver <br>
-					* Visual Studio <br>
-					* Xcode <br>
-					* HTML5<br>
-					* jQuery <br>
-					* Javascript <br>
-					* CSS <br>
-					* C++<br>
-					* Git / GitHub
+					<h3>Management / Etc</h3>
+					* JIRA / Confluence<br>
+					* Adobe Photoshop <br>
+					* SQL 	
 				</div>
-
 				
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
-					Research Methods
+					Languages
 				</div> <!--bodyHeader-->
 				<hr>
 				<div style="font-size:14px" class="fontRe">
-					* Speed Dating <br>
-					* Ethnography<br> 
-					* Shadow Recording<br> 
-					* High-Fi<br> 
-					* Mid-Fi<br>
-					* Low-Fi<br>
-					* Wireframing<br> 
-					* FGI <br>
-					* Mturk <br>
-					* Prototyping <br>
-					* Stakeholder Map<br>
-					* User Journey Map <br>
-					* Affinity Diagram <br>
-					* Persona<br>
+					* Korean - Native<br>
+					* English - Intermediate<br> 
+					* Japanese - Beginnger<br> 
 				</div>
 
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
