--- a/index.html
+++ b/index.html
@@ -71,6 +71,31 @@
 					* Unity Scripting.<br>
 					* HTC VIVE, Steam VR, Oculus Lfit<br>
 				</div>
+							<hr>
+				<div style="margin-top:13px" class="subHeader fontBr">
+					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
+				</div>
+
+				<div style="font-size:14px" class="fontRe">
+					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
+					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
+					* Designed proposal covers and spines.<br>
+					* Web Page Publishing<br>
+					* Design Research for a Color Scheme<br>
+				</div>
+
+		<hr>
+
+				<div style="margin-top:13px" class="subHeader fontBr">
+					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
+				</div>
+
+				<div style="font-size:14px" class="fontRe">
+					* VR Development.<br>
+					* VR Design.<br>
+					* Unity Scripting.<br>
+					* HTC VIVE, Steam VR, Oculus Lfit<br>
+				</div>
 
 									
 				<!--
@@ -142,15 +167,17 @@
 
 				<div style="font-size:14px" class="fontRe">
 					<hr>
-					<h3>Office</h3>
+					<h3>Programs</h3>
 					* MS Excel<br>
 					* MS Word <br>
-					* MS PowerPoint
-					<hr>
-					<h3>Management / Etc</h3>
+					* MS PowerPoint<br>
 					* JIRA / Confluence<br>
 					* Adobe Photoshop <br>
-					* SQL 	
+					* SQL query	
+					<hr>
+					<h3>Licenses</h3>
+					* GAIQ<br>
+					* Driver's Licenses	
 				</div>
 				
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
