--- a/index.html
+++ b/index.html
@@ -196,14 +196,9 @@
 				<hr>
 
 				<div class="subHeader fontBr">
-					Hongik University Advertising and Public Relations
+					Hongik University, School of Advertising and Public Relations
 				</div>
 
-				<div style="font-size:16px" class="fontRe">
-					* HTML5 / CSS / Javascript / jQuery<br>
-					* Now on Php<br>
-					* Git / GitHub<br
-				</div>
 				<h3>
 					GPA
 				</h3> 
