--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 				<div style="font-size:14px" class="fontRe">
 					<hr>
-					<h3>Programs</h3>
+					<h3>Tools</h3>
 					* MS Excel<br>
 					* MS Word <br>
 					* MS PowerPoint<br>
@@ -176,7 +176,7 @@
 					* SQL query	
 					<br>
 					<h3>Licenses</h3>
-					* GAIQ<br>
+					* GAIQ(Google Analytics Individual Qualification)<br>
 					* Driver's Licenses	
 				</div>
 				
@@ -214,7 +214,7 @@
 
 					
 
-				<!-- <div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+				<<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 				Professional Summary
 				<hr>
 				</div> 
@@ -225,7 +225,7 @@
 				</div>
 
 				<br>
-				<br> -->
+				<br>
 
 				<div class="fontBr" style="font-size:25px">
 					<!--<a href="index2.html" target="_blank">GO TO PORTFOILO SITE</a>-->
