--- a/index.html
+++ b/index.html
@@ -210,11 +210,10 @@
 					4: 3.40 / Not yet
 				<br>
 				</div>
-				<hr>
-
+				
 					
 
-				<<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+				<!--<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 				Professional Summary
 				<hr>
 				</div> 
@@ -229,7 +228,7 @@
 
 				<div class="fontBr" style="font-size:25px">
 					<!--<a href="index2.html" target="_blank">GO TO PORTFOILO SITE</a>-->
-				</div>
+				</div>-->
 
 			</div><!--bodyWrapper-->
 	</div><!--container-->
