--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				<br>
 
 				<div class="fontBr" style="font-size:25px">
-					<!--<a href="index2.html" target="_blank">GO TO PORTFOILO SITE</a>-->
+					<a href="index2.html" target="_blank">GO TO PORTFOILO SITE</a>
 				</div>-->
 
 			</div><!--bodyWrapper-->
