--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
 				</div>
 
-				<div style="font-size:14px" class="fontRe">
+				<div style="font-size:16px" class="fontRe">
 					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
 					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
 					* Designed proposal covers and spines.<br>
@@ -65,7 +65,7 @@
 					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
 				</div>
 
-				<div style="font-size:14px" class="fontRe">
+				<div style="font-size:16px" class="fontRe">
 					* VR Development.<br>
 					* VR Design.<br>
 					* Unity Scripting.<br>
@@ -76,7 +76,7 @@
 					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
 				</div>
 
-				<div style="font-size:14px" class="fontRe">
+				<div style="font-size:16px" class="fontRe">
 					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
 					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
 					* Designed proposal covers and spines.<br>
@@ -90,7 +90,7 @@
 					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
 				</div>
 
-				<div style="font-size:14px" class="fontRe">
+				<div style="font-size:16px" class="fontRe">
 					* VR Development.<br>
 					* VR Design.<br>
 					* Unity Scripting.<br>
@@ -165,7 +165,7 @@
 					Skills
 				</div> <!--bodyHeader-->
 
-				<div style="font-size:14px" class="fontRe">
+				<div style="font-size:16px" class="fontRe">
 					<hr>
 					<h3>Tools</h3>
 					* MS Excel<br>
@@ -184,7 +184,7 @@
 					Languages
 				</div> <!--bodyHeader-->
 				<hr>
-				<div style="font-size:14px" class="fontRe">
+				<div style="font-size:16px" class="fontRe">
 					* Korean - Native<br>
 					* English - Intermediate<br> 
 					* Japanese - Beginnger<br> 
@@ -195,14 +195,14 @@
 				</div> <!--bodyHeader-->
 				<hr>
 
-				<div class="subHeader fontBr">
+				<div class="subHeader fontRe">
 					Hongik University, School of Advertising and Public Relations
 				</div>
 
 				<h3>
 					GPA
 				</h3> 
-				<div style="line-height:160%; font-size:14px" class="fontRe">
+				<div style="line-height:160%; font-size:16px" class="fontRe">
 					Total: 3.76 / 4.5 <br><br>
 					1: 3.08  /  2.9  /  4.33<br>
 					2: 4.29  /  4.10 <br>	
