--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					crossorigin="anonymous">
 				</script>
 				<!-- <script src="jiResume.js"></script> -->
-				<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+				<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 				<!-- Latest compiled and minified CSS -->
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -33,7 +33,7 @@
 	<div class="container-fluid">
 				<div class="row">
 					<div class="headWrapper col-ls-12 col-md-12 col-xs-12 col-sm-12">
-						<div style="font-size:42px;" class="fontBr">
+						<div style="font-size:40px;" class="fontBr">
 							Yang, Chansup
 						</div>
 						<p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +82-10-9001-1209 | <a href="mailto:wasabi1209@gmail.com">wasabi1209@gmail.com</a></p>
@@ -51,7 +51,7 @@
 					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
 				</div>
 
-				<div style="font-size:16px" class="fontRe">
+				<div style="font-size:14px" class="fontRe">
 					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
 					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
 					* Designed proposal covers and spines.<br>
@@ -65,7 +65,7 @@
 					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
 				</div>
 
-				<div style="font-size:16px" class="fontRe">
+				<div style="font-size:14px" class="fontRe">
 					* VR Development.<br>
 					* VR Design.<br>
 					* Unity Scripting.<br>
@@ -76,7 +76,7 @@
 					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
 				</div>
 
-				<div style="font-size:16px" class="fontRe">
+				<div style="font-size:14px" class="fontRe">
 					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
 					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
 					* Designed proposal covers and spines.<br>
@@ -90,7 +90,7 @@
 					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
 				</div>
 
-				<div style="font-size:16px" class="fontRe">
+				<div style="font-size:14px" class="fontRe">
 					* VR Development.<br>
 					* VR Design.<br>
 					* Unity Scripting.<br>
@@ -165,7 +165,7 @@
 					Skills
 				</div> <!--bodyHeader-->
 
-				<div style="font-size:16px" class="fontRe">
+				<div style="font-size:14px" class="fontRe">
 					<hr>
 					<h3>Tools</h3>
 					* MS Excel<br>
@@ -184,7 +184,7 @@
 					Languages
 				</div> <!--bodyHeader-->
 				<hr>
-				<div style="font-size:16px" class="fontRe">
+				<div style="font-size:14px" class="fontRe">
 					* Korean - Native<br>
 					* English - Intermediate<br> 
 					* Japanese - Beginnger<br> 
@@ -202,7 +202,7 @@
 				<h3>
 					GPA
 				</h3> 
-				<div style="line-height:160%; font-size:16px" class="fontRe">
+				<div style="line-height:160%; font-size:14px" class="fontRe">
 					Total: 3.76 / 4.5 <br><br>
 					1: 3.08  /  2.9  /  4.33<br>
 					2: 4.29  /  4.10 <br>	
