--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<div style="font-size:14px" class="fontRe">
 					* Korean - Native<br>
 					* English - Intermediate<br> 
-					* Japanese - Beginnger<br> 
+					* Japanese - Beginner<br> 
 				</div>
 
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
