--- a/index.html
+++ b/index.html
@@ -97,70 +97,6 @@
 					* HTC VIVE, Steam VR, Oculus Lfit<br>
 				</div>
 
-									
-				<!--
-				<h3>2017</h3>
-				<div style="font-size:14px" class="fontRe">
-					<div>
-					* 패스트캠퍼스 "프레이머로 구현하는 인터렉티브 디자인 및 UX" 코스 교육 담당 
-					</div>
-
-					<div>
-						* 디닷인터렉티브 VR 개발 및 디자인 인턴 (Intern in VR Development and Design)
-					</div> 
-
-					<div>
-						<a href="http://www.riss.kr/search/detail/DetailView.do?p_mat_type=1a0202e37d52c72d&control_no=481ca61f84ea76997ecd42904f0c5d65">* 한국디자인학회 논문 개제 및 장려상(A design proposal to improve safety of pedestrians
-						while using their smartphone)</a>
-					</div>
-
-					<div>
-						* 홍익대학교 공과대학 연구원 (Researcher at Hongik University Engineering Department)
-					</div>
-
-					<div>
-						<a href="http://www.kbskorean.co.kr/">* KBS 한국어진흥원 홈페이지 리뉴얼 디자인 및 프론트앤드 (Web Design / Front End Web Development)</a>
-					</div>
-
-					<div>
-						<a href="http://proto.netlify.com/">* 홍대 미술대학 시디과 코딩 소모임 프로토 설립 (Visual Communication Department Coding Academy 'PROTO'
-						Founder & First President)</a>
-					</div>
-
-					<div>
-						* 석사 논문 어시스턴트 (Master's Degree Graduation Paper About Interactive News / Assistance Using Mturk Survey)
-					</div>
-					<div>
-						* 박사 논문 어시스턴트 (Ph.D. Research Paper About Minimalism Design / Assistance Using Survey)
-					</div>
-					<div>
-						* 박사 논문 어시스턴트 (Ph.D. Research Paper About Color Theory / Assistance Usign Mturk Survey)
-					</div>
-					<hr>
-				</div>
-
-					<h3>2016</h3> 	
-
-
-						<div style="font-size:14px" class="fontRe">
-						<div class="flex" id="film">* 와우 영상제 웹 디자인, 개발 팀장 (2016 WOW Flim Festival / Web Design / Development Head)</div>
-
-						<div>* 연세대학교 학회 S&D 리디자인 (Yonsei University Consulting Academy Brochure Design)</div>
-						<div>* 홍익대학교 아두이노 3D 프린팅 동아리 설립 멤버(Arduino/3D Printing Club)</div>
-					</div>
-					<hr>
-					<h3>2015</h3>
-					<div style="font-size:14px" class="fontRe">
-						<div>
-							* 시각디자인학과 학부 연구생(Undergraduate Researcher / Research Paper Asssistance)<br>
-						</div>
-						<div>
-							* 부산대학교 포스터 어워드 우수상 (2015 Pusan National University Poster Design Exellence Award)
-					</div>
-
-					<br>
-				</div>
-				-->
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 					Skills
 				</div> <!--bodyHeader-->
@@ -203,11 +139,11 @@
 					GPA
 				</h3> 
 				<div style="line-height:160%; font-size:14px" class="fontRe">
-					Total: 3.76 / 4.5 <br><br>
-					1: 3.08  /  2.9  /  4.33<br>
-					2: 4.29  /  4.10 <br>	
-					3: 4.17  /  3.97 <br>
-					4: 3.40 / Not yet
+					Total: 3.76 / 4.5 <br>
+					&nbsp&nbsp1: 3.08  /  4.33<br>
+					&nbsp&nbsp2: 4.29  /  4.10 <br>	
+					&nbsp&nbsp3: 4.17  /  3.97 <br>
+					&nbsp&nbsp4: 3.40 / Not yet
 				<br>
 				</div>
 				
