--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</div> <!--bodyHeader-->
 				<hr>
 
-				<div class="subHeader fontRe">
+				<div style="margin-top:13px" class="subHeader fontBr">
 					Hongik University, School of Advertising and Public Relations
 				</div>
 
