--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					* Design Research for a Color Scheme<br>
 				</div>
 
-		<hr>
+				<hr style="border-style:dashed;">
 
 				<div style="margin-top:13px" class="subHeader fontBr">
 					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
@@ -71,8 +71,8 @@
 					* Unity Scripting.<br>
 					* HTC VIVE, Steam VR, Oculus Lfit<br>
 				</div>
-							<hr>
-				<div style="margin-top:13px" class="subHeader fontBr">
+				<hr style="border-style:dashed;">
+						<div style="margin-top:13px" class="subHeader fontBr">
 					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
 				</div>
 
@@ -84,7 +84,7 @@
 					* Design Research for a Color Scheme<br>
 				</div>
 
-		<hr>
+				<hr style="border-style:dashed;">
 
 				<div style="margin-top:13px" class="subHeader fontBr">
 					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
@@ -96,6 +96,7 @@
 					* Unity Scripting.<br>
 					* HTC VIVE, Steam VR, Oculus Lfit<br>
 				</div>
+				<br>
 
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 					Skills
@@ -115,7 +116,7 @@
 					* GAIQ(Google Analytics Individual Qualification)<br>
 					* Driver's Licenses	
 				</div>
-				
+				<br>
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 					Languages
 				</div> <!--bodyHeader-->
@@ -125,7 +126,7 @@
 					* English - Intermediate<br> 
 					* Japanese - Beginner<br> 
 				</div>
-
+				<br>
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 					Education
 				</div> <!--bodyHeader-->
