--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			
 			<hr>
 				<div style="margin-top:13px" class="subHeader fontBr">
-					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
+					CJ E&M MezzoMedia &nbsp Product Manager	&nbsp November 2014 - Now
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
