--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<hr style="border-style:dashed;">
 
 				<div style="margin-top:13px" class="subHeader fontBr">
-					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
+					Bluebird &nbsp Marketing staff &nbsp June 2017 - Sep 2017
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
@@ -73,7 +73,7 @@
 				</div>
 				<hr style="border-style:dashed;">
 						<div style="margin-top:13px" class="subHeader fontBr">
-					DoctorKitchen &nbsp Designer &nbsp July 2016 - Sep 2016
+					NHN Search Marketing &nbsp Account Manager &nbsp July 2016 - Sep 2016
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
@@ -84,18 +84,6 @@
 					* Design Research for a Color Scheme<br>
 				</div>
 
-				<hr style="border-style:dashed;">
-
-				<div style="margin-top:13px" class="subHeader fontBr">
-					Didot Interactive &nbsp Designer &nbsp June 2017 - Sep 2017
-				</div>
-
-				<div style="font-size:14px" class="fontRe">
-					* VR Development.<br>
-					* VR Design.<br>
-					* Unity Scripting.<br>
-					* HTC VIVE, Steam VR, Oculus Lfit<br>
-				</div>
 				<br>
 
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
