--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					crossorigin="anonymous">
 				</script>
 				<!-- <script src="jiResume.js"></script> -->
-				<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+				<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500" rel="stylesheet">
 				<!-- Latest compiled and minified CSS -->
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
