--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
-					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
-					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
-					* Designed proposal covers and spines.<br>
-					* Web Page Publishing<br>
-					* Design Research for a Color Scheme<br>
+					* Proejct Facebook Marketing solution(2018) - Erd / UI / UX <br>
+					* Proejct Insight Matrix(2017 ~ 2018) - Erd / UI / UX <br>
+					* Project <a href="http://a-plus.meba.kr">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
+					* Proejct X-plus DMP(2015 ~ 2017) - UI / UX<br>
 				</div>
 
 				<hr style="border-style:dashed;">
@@ -66,10 +65,8 @@
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
-					* VR Development.<br>
-					* VR Design.<br>
-					* Unity Scripting.<br>
-					* HTC VIVE, Steam VR, Oculus Lfit<br>
+					* Overseas Sales support<br>
+					* Digital Marketing<br>
 				</div>
 				<hr style="border-style:dashed;">
 						<div style="margin-top:13px" class="subHeader fontBr">
@@ -77,11 +74,9 @@
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
-					* Developed design deliverables that elevated differentiated and functioned on-brand and on-strategy.<br>
-					* Designed new on-brand visual elements to effectively convey concepts and messaging.<br>
-					* Designed proposal covers and spines.<br>
-					* Web Page Publishing<br>
-					* Design Research for a Color Scheme<br>
+					* Search AD account Optimization<br>
+					* Sales proposal <br>
+					* Maked sales materials<br>
 				</div>
 
 				<br>
@@ -123,16 +118,6 @@
 				<div style="margin-top:13px" class="subHeader fontBr">
 					Hongik University, School of Advertising and Public Relations
 				</div>
-
-				<h3>
-					GPA
-				</h3>
-				<div style="line-height:160%; font-size:14px" class="fontRe">
-					Total: 3.76 / 4.5 <br>
-					&nbsp&nbsp1: 3.08  /  4.33<br>
-					&nbsp&nbsp2: 4.29  /  4.10 <br>
-					&nbsp&nbsp3: 4.17  /  3.97 <br>
-					&nbsp&nbsp4: 3.40 / Not yet
 				<br>
 				</div>
 
