--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div style="font-size:14px" class="fontRe">
 					* Proejct Facebook Marketing solution(2018) - Erd / UI / UX <br>
 					* Proejct Insight Matrix(2017 ~ 2018) - Erd / UI / UX <br>
-					* Project <a href="http://a-plus.meba.kr">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
+					* Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
 					* Proejct X-plus DMP(2015 ~ 2017) - UI / UX<br>
 				</div>
 
