--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
-					* Proejct Facebook Marketing solution(2018) - Erd / UI / UX <br>
-					* Proejct Insight Matrix(2017 ~ 2018) - Erd / UI / UX <br>
-					* Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
-					* Proejct X-plus DMP(2015 ~ 2017) - UI / UX<br>
+					<h2> AD Tech Platform Planning <h2>
+					  * Proejct Facebook Marketing solution(2018) - Erd / UI / UX <br>
+					  * Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
+					  * Proejct X-plus DMP(2015 ~ 2017) - UI / UX<br>
+					<h2> Web Service Planning <h2>
+						* Proejct Insight Matrix(2017 ~ 2018) - Erd / UI / UX <br>
+
 				</div>
 
 				<hr style="border-style:dashed;">
@@ -65,8 +68,9 @@
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
-					* Overseas Sales support<br>
-					* Digital Marketing<br>
+					* Web service management <br>
+					* Online/Digital Marketing support <br>
+					* Local/Overseas Sales support <br>
 				</div>
 				<hr style="border-style:dashed;">
 						<div style="margin-top:13px" class="subHeader fontBr">
@@ -74,9 +78,9 @@
 				</div>
 
 				<div style="font-size:14px" class="fontRe">
-					* Search AD account Optimization<br>
-					* Sales proposal <br>
-					* Maked sales materials<br>
+					* Search Engine Marketing planning <br>
+					* Search Engine Marketing management <br>
+					* Maked Sales kit <br>
 				</div>
 
 				<br>
