--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 				<div style="margin-top:13px" class="subHeader fontBr">
 					CJ E&M MezzoMedia &nbsp Product Manager	&nbsp November 2014 - Now
 				</div>
-
+	<h2> AD Tech Platform Planning <h2>
 				<div style="font-size:14px" class="fontRe">
-					<h2> AD Tech Platform Planning <h2>
 					  * Proejct Facebook Marketing solution(2018) - Erd / UI / UX <br>
 					  * Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
 					  * Proejct X-plus DMP(2015 ~ 2017) - UI / UX<br>
+					</div>
 					<h2> Web Service Planning <h2>
+							<div style="font-size:14px" class="fontRe">
 						* Proejct Insight Matrix(2017 ~ 2018) - Erd / UI / UX <br>
 
 				</div>
@@ -122,7 +123,7 @@
 					* Japanese - Beginner<br>
 				</div>
 				<br>
-	
+
 				</div>
 
 
