--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
 	AD Tech Platform Planning
 </div>
 				<div style="font-size:14px" class="fontRe">
-					  * Proejct Facebook Marketing solution(2018) - Erd / UI / UX <br>
-					  * Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2015 ~ 2016) - UI/ UX <br>
-					  * Proejct X-plus DMP(2015 ~ 2017) - UI / UX<br>
+					  * Proejct Facebook Marketing solution(2018) <br>
+					  * Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2016 ~ 2017) <br>
+						* Proejct S-plus Mobile network(2015 ~ 2016)<br>
+					  * Proejct X-plus DMP(2015 ~ 2017)<br>
 					</div>
 					<div style="margin-top:13px" class="subHeader fontBr">Web Service Planning </div>
 							<div style="font-size:14px" class="fontRe">
-						* Proejct Insight Matrix(2017 ~ 2018) - Erd / UI / UX <br>
+						* Proejct Insight Matrix(2017 ~ 2018)<br>
 
 				</div>
 
