--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
 
 				<br>
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
+					Portfolio
+				</div> <!--bodyHeader-->
+				<hr>
+
+				<div style="margin-top:13px" class="subHeader fontBr">
+					Download <a href="">Here</a>
+				</div>
+				<br>
+				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
 					Education
 				</div> <!--bodyHeader-->
 				<hr>
