--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 				<div style="font-size:14px" class="fontRe">
 					  * Proejct Facebook Marketing solution(2018) <br>
 					  * Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2016 ~ 2017) <br>
-						* Proejct S-plus Mobile network(2015 ~ 2016)<br>
 					  * Proejct X-plus DMP(2015 ~ 2017)<br>
+					  * Proejct S-plus Mobile network(2015 ~ 2016)<br>
 					</div>
 					<div style="margin-top:13px" class="subHeader fontBr">Web Service Planning </div>
 							<div style="font-size:14px" class="fontRe">
@@ -78,7 +78,7 @@
 				</div>
 				<hr style="border-style:dashed;">
 						<h3>
-					NHN Search Marketing &nbsp Account Manager &nbsp April 2011 - Markch 2013
+					NHN Search Marketing &nbsp Account Manager &nbsp April 2011 - March 2013
 				</h3>
 
 				<div style="font-size:14px" class="fontRe">
@@ -94,7 +94,7 @@
 				<hr>
 
 				<div style="margin-top:13px" class="subHeader fontBr">
-					Download <a href="https://wasabi1209.github.io/portfolio/file/Portfolio_20170925.pdf" target="_blank">Here</a>
+					Click <a href="https://wasabi1209.github.io/portfolio/file/Portfolio_20170925.pdf" target="_blank">Here</a>
 				</div>
 				<br>
 				<div style="margin:25px 0px 5px 0px;" class="bodyHeader fontBr">
@@ -118,7 +118,7 @@
 					* MS PowerPoint<br>
 					* JIRA / Confluence<br>
 					* Adobe Photoshop <br>
-					* SQL query
+					* SQL
 					<br>
 					<h3>Licenses</h3>
 					* GAIQ(Google Analytics Individual Qualification)<br>
